<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">SmartDental</string>
    <string name="title_activity_home">SmartDental</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_one_emr">详细病历查看</string>
    <string name="title_activity_one_image">详细图片查看</string>
    <string name="title_activity_edit_basic_info">编辑个人基本信息</string>
    <string name="title_activity_edit_extends_info">编辑其它个人信息</string>
    <string name="title_activity_edit_contact">编辑联系方式</string>
    <string name="title_activity_edit_pass">编辑既往史</string>
    <string name="title_activity_edit_allergy">编辑过敏史</string>
    <string name="title_activity_edit_family">编辑家族史</string>
    <string name="title_activity_oneday_appoint">个人预约查看</string>
    <string name="title_activity_login">SmartDental</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_change_password">修改密码</string>
    <string name="title_activity_admin">超级管理员</string>
    <string name="title_activity_my_test">MyTestActivity</string>
    <string name="title_activity_reply">评论</string>
    <string name="title_activity_post_bbs">发帖</string>
    <string name="title_activity_all_patient">所有病人</string>
    <string name="title_activity_patient_info">病人信息</string>
    <string name="admin_username">admin</string>
    <string name="admin_password">admin123</string>
    <string name="choose_circle">选择圈子</string>
    <string name="join_circle">加入圈子</string>
    <string name="join_circle_search_hint">输入要搜索的医生名字</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="kick_out_success">踢出成功</string>
    <string name="are_you_sure">您真的要将</string>
    <string name="kick_out_confirm">踢出圈子吗？</string>
    <string name="enter_circle_password">请输入认证密码</string>
    <string name="title_activity_join_circle">加入圈子</string>
    <string name="action_search">搜索</string>
    <string name="doctor_does_not_exist">医生不存在</string>
    <string name="wrong_password">密码错误</string>
    <string name="message_from_smartdental">来自SmartDental的消息</string>
    <string name="user_does_not_exist">用户不存在</string>
    <string name="cannot_connect_to_server">连不上服务器</string>
    <string name="unknown_error">未知错误</string>
    <string name="already_in_circle">您已加入过该圈子</string>
    <string name="join_successfully">加入成功</string>
    <string name="system_busy">系统繁忙，请稍候</string>
    <string name="loading">载入中，请稍候...</string>
    <string name="has_replied">回复了您</string>
    <string name="title_activity_detail">帖子详情</string>
    <string name="collect">收藏</string>
    <string name="cancellation">取消收藏</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_ing">登录中</string>
    <string name="register">注册</string>
    <string name="register_ing">注册中</string>
    <string name="register_success">注册成功</string>
    <string name="repeat_password">重复密码</string>
    <string name="return_back">返回</string>
    <string name="message_null_username">用户名不能为空</string>
    <string name="message_null_password">密码不能为空</string>
    <string name="message_password_not_same">两次密码输入不一致</string>
    <string name="username_exists">用户名已存在</string>
    <string name="add_one_doctor">添加单个医生</string>
    <string name="add_many_doctor">添加批量医生</string>
    <string name="add">添加</string>
    <string name="old_password_wrong">旧密码错误</string>
    <string name="new_password_not_same">两次新密码输入不一致</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="file_export_hint">从xls表格文件导入\n格式为每行一条记录：用户名,密码\n注意：分隔符必须使用英文逗号。</string>
    <string name="file_export">从文件导入</string>
    <string name="file_not_exists">文件不存在</string>
    <string name="file_open_failed">打开文件失败</string>
    <string name="file_format_error">文件格式有误</string>
    <string name="imported">导入了</string>
    <string name="number_record">个记录</string>
    <string name="number_error">个错误，</string>
    <string name="set_circle_password">设置圈子密码</string>
    <string name="manage_all_patients">管理圈子的所有病人</string>
    <string name="all_patient_hint">圈子内的所有病人，长按踢出圈子。</string>
    <string name="message_null_reply">评论不能为空</string>
    <string name="message_publish_succeed">发布成功</string>
    <string name="message_link_fail">连不上服务器</string>
    <string name="no_news">暂时没有新的未读消息。</string>
    <string name="post_empty_title">标题不能为空</string>
    <string name="post_empty_content">内容不能为空</string>
    <string name="post_ok">发布成功</string>
    <string name="post_none_circle">请先加入圈子</string>
</resources>
